syntax = "proto3";
import "google/protobuf/timestamp.proto";

package v2.mod_disco.services;

option go_package = "github.com/getcouragenow/mod/mod-disco/service/go/rpc/v2";

message SurveyProject {
  string survey_project_id = 1;
  string sys_account_project_id = 2;
  bytes survey_schema_types = 3; // SurveySchemaType in JSON format
  bytes survey_filter_types = 4; // SurveyFilterType in JSON format
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message SurveyUser {
  string survey_user_id = 1;
  string survey_project_id = 2;
  string sys_account_account_id = 3;
  bytes survey_schema_values = 4;
  bytes survey_schema_filters = 5; // serialized to strongly typed stuff in DB
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message IdRequest {
  string survey_user_id = 1;
  string sys_account_id = 2;
  string survey_project_id = 3;
}

message ListRequest {
  IdRequest id_request = 1;
  int64 per_page_entries = 2;
  string order_by = 3;
  string current_page_id = 4;
  bytes filters = 5;
}

message ListResponse {
  repeated SurveyProject survey_projects = 1;
  repeated SurveyUser survey_users = 2;
  int64 next_page_id = 3;
}

message NewSurveyProjectRequest {
  string sys_account_project_id = 1;
  bytes survey_schema_types = 2;
  bytes survey_filter_types = 3;
}

message NewSurveyUserRequest {
  string survey_project_id = 1;
  string sys_account_user_id = 2;
  bytes survey_schema_types = 3;
  bytes survey_filter_types = 4;
}

message UpdateSurveyProjectRequest {
  string survey_project_id = 1;
  bytes survey_schema_types = 2;
  bytes survey_filter_types = 3;
}

message UpdateSurveyUserRequest {
  string survey_user_id = 1;
  bytes survey_schema_types = 2;
  bytes survey_filter_types = 3;
}